<resources>
    <!--signin-->
    <string name="app_name">29th_first_semina</string>
    <string name="sopthub">SOPTHub</string>
    <string name="login">로그인</string>
    <string name="id">깃허브 아이디</string>
    <string name="pwd">비밀번호</string>
    <string name="input_id">깃허브 아이디를 입력해주세요</string>
    <string name="input_pwd">비밀번호를 입력해주세요</string>
    <string name="signin">회원가입</string>
    <string name="qustion_signin">계정이 없으신가요?</string>

    <!--menu-->
    <string name="profile">프로필</string>
    <string name="home">홈</string>
    <string name="camera">카메라</string>


    <!--signup-->
    <string name="name">이름</string>
    <string name="complete_signup">회원가입 완료</string>
    <string name="input_name">이름을 입력해주세요</string>


    <!--Home-->
    <string name="ksh">김송현</string>
    <string name="old">나이</string>
    <string name="git_id">ssonghyun101</string>
    <string name="introduce">여왕꿀벌입니다</string>
    <string name="age">23</string>
    <string name="mbti">mbti</string>
    <string name="infj">infj</string>
    <string name="sogae">안녕하세요</string>
    <string name="follower">팔로워 목록</string>
    <string name="repogitory">레포지토리 목록</string>


    <!--homefragmnet-->
    <string name="following">팔로잉</string>
    <string name="followerr">팔로워</string>
    <string name="ready">준비 중입니다</string>


    <!--Onboarding-->
    <string name="onborad">온보딩</string>
    <string name="btn_next">다음으로</string>
    <string name="tv_1">SOPTHub에 오신걸\n환영합니다!</string>
    <string name="tv_2">SOPTHub에서 즐거운 시간\n보내시길 바랍니다!</string>
    <string name="tv_3">SOPTHub를\n시작해볼까요?</string>
    <string name="start">시작하기</string>

    <!--환경설정-->
    <string name="logout">로그아웃</string>
    <string name="setting">세팅</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>